--- a/index.html
+++ b/index.html
@@ -703,21 +703,22 @@
 
           <ul class="filter-list">
 
-           <li class="filter-item">
-              <button class="active" data-filter-btn>Tudo</button>
+            <li class="filter-item">
+              <button class="active" data-filter-btn>All</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Front-end</button>
+              <button data-filter-btn>Web design</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Back-end</button>
+              <button data-filter-btn>Applications</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Fullstack</button>
+              <button data-filter-btn>Web development</button>
             </li>
+
           </ul>
 
           <div class="filter-select-box">
@@ -735,19 +736,19 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>Tudo</button>
+                <button data-select-item>All</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Front-end</button>
+                <button data-select-item>Web design</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Back-end</button>
+                <button data-select-item>Applications</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Fullstack</button>
+                <button data-select-item>Web development</button>
               </li>
 
             </ul>
@@ -757,25 +758,25 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/Underewarrr/tactical-titans-cs">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="Tactical-Titans-CSGO" loading="lazy">
+                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Tactical-Titans-CSGO</h3>
+                <h3 class="project-title">Finance</h3>
 
-                <p class="project-category">Fullstack</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/Underewarrr/nossocha">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -785,51 +786,105 @@
                   <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Nosso Cha</h3>
+                <h3 class="project-title">Orizon</h3>
 
-                <p class="project-category">Fullstack</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://github.com/Underewarrr/modern-ui-ux">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="Modern UI-UX" loading="lazy">
+                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Modern UI-UX</h3>
+                <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Front-End</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://github.com/Underewarrr/trybe-wallet">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-4.png" alt="Modern BlockChain" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Carteira Virtual</h3>
-
-                <p class="project-category">Front-end</p>
-
-              </a>
-            </li>     
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://github.com/Underewarrr/Trybe-Smith">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Brawlhalla</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">DSM.</h3>
+
+                <p class="project-category">Web design</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">MetaSpark</h3>
+
+                <p class="project-category">Web design</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Summary</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -839,9 +894,27 @@
                   <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager Crud</h3>
+                <h3 class="project-title">Task Manager</h3>
 
                 <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Arrival</h3>
+
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
@@ -870,7 +943,7 @@
 
           <ul class="blog-posts-list">
 
-            <!-- <li class="blog-post-item">
+            <li class="blog-post-item">
               <a href="#">
 
                 <figure class="blog-banner-box">
@@ -1036,7 +1109,7 @@
                 </div>
 
               </a>
-            </li> -->
+            </li>
 
           </ul>
 
@@ -1070,13 +1143,22 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <a class="wpplink" href="https://wa.me/5535991968159">
+          <form action="#" class="form" data-form>
 
-            <button class="form-btn" disabled data-form-btn>
+            <div class="input-wrapper">
+              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+
+              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+            </div>
+
+            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+
+            <button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
-              <span>Whatsapp</span>
+              <span>Send Message</span>
             </button>
-          </a>
+
+          </form>
 
         </section>
 
