--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Oque estou fazendo</h3>
 
           <ul class="service-list">
 
@@ -238,10 +238,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Front-end</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Design moderno e de alta qualidade feito em React e Bootstrap.
                 </p>
               </div>
 
@@ -254,10 +254,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Back-end</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Desenvolvimento de APIs / Background-Workers de alta qualidade usando NodeJS + Typescript.
                 </p>
               </div>
 
@@ -273,13 +273,13 @@
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Desenvolvimento profissional de aplicativos para iOS e Android Utilizando NodeJS + Electrcon e Typescript.
                 </p>
               </div>
 
             </li>
 
-            <li class="service-item">
+            <!-- <li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
@@ -293,7 +293,7 @@
                 </p>
               </div>
 
-            </li>
+            </li> -->
 
           </ul>
 
