--- a/index.html
+++ b/index.html
@@ -620,20 +620,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">TypeScript</h5>
-                <!-- <data value="80">80%</data> -->
+                <h5 class="h5">Web design</h5>
+                <data value="80">80%</data>
               </div>
 
-              <!-- <div class="skill-progress-bg">
+              <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div> -->
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">JavaScript</h5>
               </div>
 
             </li>
@@ -641,35 +633,40 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">React</h5>
+                <h5 class="h5">Graphic design</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
             </li>
 
             <li class="skills-item">
+
               <div class="title-wrapper">
-                <h5 class="h5">React-Router</h5>
+                <h5 class="h5">Branding</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
               </div>
 
             </li>
 
             <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">Github</h5>
-              </div>
-
-            </li>
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">Docker</h5>
-              </div>
-            </li>
-
-            <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">NodeJs</h5>
+                <h5 class="h5">WordPress</h5>
+                <data value="50">50%</data>
               </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
+
             </li>
 
           </ul>
@@ -751,78 +748,78 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/Underewarrr/tactical-titans-cs">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="Tactical-Titans-CSGO" loading="lazy">
+                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Tactical-Titans-CSGO</h3>
+                <h3 class="project-title">Finance</h3>
 
-                <p class="project-category">Fullstack</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/Underewarrr/nossocha">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="Nosso Cha" loading="lazy">
+                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Nosso Cha</h3>
+                <h3 class="project-title">Orizon</h3>
 
-                <p class="project-category">Fullstack</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://github.com/Underewarrr/modern-ui-ux">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="Modern UI-UX" loading="lazy">
+                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Modern UI-UX</h3>
+                <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Front-End</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://github.com/Underewarrr/trybe-wallet">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="Modern BlockChain" loading="lazy">
+                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Carteira Virtual</h3>
+                <h3 class="project-title">Brawlhalla</h3>
 
-                <p class="project-category">Front-end</p>
+                <p class="project-category">Applications</p>
 
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
 
                 <figure class="project-img">
@@ -910,7 +907,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li> -->
+            </li>
 
           </ul>
 
@@ -925,7 +922,7 @@
       <!--
         - #BLOG
       -->
-<!-- 
+
       <article class="blog" data-page="blog">
 
         <header>
@@ -1110,7 +1107,7 @@
 
       </article>
 
- -->
+
 
 
 
