--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://github.com/underewarrr" class="social-link">
+            <a href="#" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/rafhael-oliveira/" class="social-link">
+            <a href="#" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -306,7 +306,7 @@
 
         <section class="testimonials">
 
-          <h3 class="h3 testimonials-title">Recomendações</h3>
+          <h3 class="h3 testimonials-title">Recomenda</h3>
 
           <ul class="testimonials-list has-scrollbar">
 
@@ -441,25 +441,43 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Comunidades que faço parte</h3>
+          <h3 class="h3 clients-title">Clients</h3>
 
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="https://growupmedia.vercel.app/">
+              <a href="#">
                 <img src="./assets/images/logo-1-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="https://tibiaking.com/profile/279074-underewar/">
+              <a href="#">
                 <img src="./assets/images/logo-2-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="https://otland.net/members/underewar.175624/">
+              <a href="#">
                 <img src="./assets/images/logo-3-color.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/logo-4-color.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/logo-5-color.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
             </li>
 
