--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <h4 class="h4 service-item-title">Front-end</h4>
 
                 <p class="service-item-text">
-                  Design moderno e de alta qualidade feito em React e Bootstrap + Typescript.
+                  Design moderno e de alta qualidade feito em React e Bootstrap.
                 </p>
               </div>
 
@@ -273,7 +273,7 @@
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Desenvolvimento profissional de aplicativos para iOS e Android Utilizando NodeJS e Electrcon + Typescript.
+                  Desenvolvimento profissional de aplicativos para iOS e Android Utilizando NodeJS + Electrcon e Typescript.
                 </p>
               </div>
 
@@ -306,7 +306,7 @@
 
         <section class="testimonials">
 
-          <h3 class="h3 testimonials-title">Recomenda</h3>
+          <h3 class="h3 testimonials-title">Testimonials</h3>
 
           <ul class="testimonials-list has-scrollbar">
 
@@ -394,7 +394,7 @@
           - testimonials modal
         -->
 
-        <!-- <div class="modal-container" data-modal-container>
+        <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -432,7 +432,7 @@
 
           </section>
 
-        </div> -->
+        </div>
 
 
         <!--
